fix: Add missing cursor methods and fix tests